# llm-wiki-gigachat

./: .gitignore  AGENTS.md  ANALYSIS.md  DEMO_PLAYBOOK.md  PLAN.md  README.md  pyproject.toml  run_aurora_demo.py  run_demo.py  test_wiki.py
.obsidian/: app.json  core-plugins.json  graph.json  workspace.json
bench/: run_bench.py  tasks.yaml
bench/verify/: _shared.py  verify_bootstrap.py  verify_contradictions.py  verify_exports.py  verify_ingest.py  verify_links.py  verify_provenance.py  verify_query.py  verify_raw_immutability.py
configs/A_baseline_schema_only/: AGENTS.md
configs/B_generic_skills/: AGENTS.md
configs/C_gigachat_schema_tools/: AGENTS.md
corpora/aurora-signal/: README.md  raw_manifest.yaml
corpora/bakery/: README.md  raw_manifest.yaml
corpora/business-fast-demo/: README.md  raw_manifest.yaml
corpora/client-incident/: README.md  raw_manifest.yaml
corpora/smart-spending/: AGENTS.md  README.md  raw_manifest.yaml
demo/initial_gigachat_test/: README.md  source.md
outputs/business-fast-demo/: .progress  raw_manifest.yaml
raw/: raw_manifest.yaml
raw/attention/: flash-attention-2022.md
raw/corpus_mvp/: 00_karpathy_llm_wiki.md  01_deepagents_readme.md  03_llms_txt_spec.md  05_synthetic_contradiction_new.md  07_ru_internal_notes.md
raw/nlp/: 2024-06-10-bert-pretraining-deep-bidirectional-transformers.md
scripts/: demo_last_step.sh
skills/karpathy-llm-wiki/: SKILL.md
sources/: 02-bert-pretraining.md  03-gpt-language-models.md  04-flash-attention.md
tools/: wiki_lint.py
wiki/: index.md  log.md
wiki/nlp/: transformer.md
(+118 files in other folders)
